# solaredge2mqtt

./: .env.dist  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: release.yml
src/: main.rs
src/homeassistant/: config.rs
src/mqtt/: state.rs
src/solaredge/: current_power_flow.rs  mod.rs
