[package]
name = "solaredge2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
derive_more = "0.99.17"
gethostname = "0.5.0"
dotenv = "0.15.0"
simple_logger = "5.0.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rumqttc = "0.24.0"
